--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 How to open the webpage:
-1. Make sure you have installed npm
+1. Make sure you have installed npm (https://docs.npmjs.com/downloading-and-installing-node-js-and-npm)
 2. Make sure you have installed http-server using npm (npm install --global http-server)
 3. http-server 
